monitoria/mac323/4-2-33/grades/Camila-Naomi-Kodaira_190886_assignsubmission_file_WordDAG.txt
SOBRE O ERRO
Então, eu fiquei um bom tempo tentando compilar seu exercício. Eu segui o procedimento padrão com três métodos de compilação. Pesquise COMP no log que eu te mandei pra ver a saída dos 3 separada (se bem que não fez diferença nenhuma acho). Essa classe IndexSET não existe na biblioteca algs4. Você baixou do site em outro lugar? Eu acho que encontrei ela, mas tentei compilar com ela também e deu tudo errado, enfim...

LOG DE COMPILAÇÃO E TESTE
Existem três métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique os 3.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros.

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
Digraph.java:58: error: cannot find symbol
    private Bag<Integer>[] adj;    // adj[v] = adjacency list for vertex v
            ^
  symbol:   class Bag
  location: class Digraph
WordDAG.java:245: error: no suitable constructor found for Topological(Digraph)
        Topological T = new Topological(R);
                        ^
    constructor Topological.Topological(edu.princeton.cs.algs4.Digraph) is not applicable
      (argument mismatch; Digraph cannot be converted to edu.princeton.cs.algs4.Digraph)
    constructor Topological.Topological(EdgeWeightedDigraph) is not applicable
      (argument mismatch; Digraph cannot be converted to EdgeWeightedDigraph)
WordDAG.java:246: error: reference to Stack is ambiguous
        Stack<Integer> pilha = new Stack<Integer>();
        ^
  both class java.util.Stack in java.util and class edu.princeton.cs.algs4.Stack in edu.princeton.cs.algs4 match
WordDAG.java:246: error: reference to Stack is ambiguous
        Stack<Integer> pilha = new Stack<Integer>();
                                   ^
  both class java.util.Stack in java.util and class edu.princeton.cs.algs4.Stack in edu.princeton.cs.algs4 match
Digraph.java:72: error: cannot find symbol
        adj = (Bag<Integer>[]) new Bag[V];
               ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:72: error: cannot find symbol
        adj = (Bag<Integer>[]) new Bag[V];
                                   ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:74: error: cannot find symbol
            adj[v] = new Bag<Integer>();
                         ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:93: error: cannot find symbol
            adj = (Bag<Integer>[]) new Bag[V];
                   ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:93: error: cannot find symbol
            adj = (Bag<Integer>[]) new Bag[V];
                                       ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:95: error: cannot find symbol
                adj[v] = new Bag<Integer>();
                             ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:122: error: cannot find symbol
            Stack<Integer> reverse = new Stack<Integer>();
            ^
  symbol:   class Stack
  location: class Digraph
Digraph.java:122: error: cannot find symbol
            Stack<Integer> reverse = new Stack<Integer>();
                                         ^
  symbol:   class Stack
  location: class Digraph
Note: WordDAG.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
=========== TENTANDO COMPILAR DE NOVO (LevelTraversal.java -> WordDAG.java) =============
Digraph.java:58: error: cannot find symbol
    private Bag<Integer>[] adj;    // adj[v] = adjacency list for vertex v
            ^
  symbol:   class Bag
  location: class Digraph
WordDAG.java:245: error: no suitable constructor found for Topological(Digraph)
        Topological T = new Topological(R);
                        ^
    constructor Topological.Topological(edu.princeton.cs.algs4.Digraph) is not applicable
      (argument mismatch; Digraph cannot be converted to edu.princeton.cs.algs4.Digraph)
    constructor Topological.Topological(EdgeWeightedDigraph) is not applicable
      (argument mismatch; Digraph cannot be converted to EdgeWeightedDigraph)
WordDAG.java:246: error: reference to Stack is ambiguous
        Stack<Integer> pilha = new Stack<Integer>();
        ^
  both class java.util.Stack in java.util and class edu.princeton.cs.algs4.Stack in edu.princeton.cs.algs4 match
WordDAG.java:246: error: reference to Stack is ambiguous
        Stack<Integer> pilha = new Stack<Integer>();
                                   ^
  both class java.util.Stack in java.util and class edu.princeton.cs.algs4.Stack in edu.princeton.cs.algs4 match
Digraph.java:72: error: cannot find symbol
        adj = (Bag<Integer>[]) new Bag[V];
               ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:72: error: cannot find symbol
        adj = (Bag<Integer>[]) new Bag[V];
                                   ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:74: error: cannot find symbol
            adj[v] = new Bag<Integer>();
                         ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:93: error: cannot find symbol
            adj = (Bag<Integer>[]) new Bag[V];
                   ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:93: error: cannot find symbol
            adj = (Bag<Integer>[]) new Bag[V];
                                       ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:95: error: cannot find symbol
                adj[v] = new Bag<Integer>();
                             ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:122: error: cannot find symbol
            Stack<Integer> reverse = new Stack<Integer>();
            ^
  symbol:   class Stack
  location: class Digraph
Digraph.java:122: error: cannot find symbol
            Stack<Integer> reverse = new Stack<Integer>();
                                         ^
  symbol:   class Stack
  location: class Digraph
Note: WordDAG.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
Digraph.java:58: error: cannot find symbol
    private Bag<Integer>[] adj;    // adj[v] = adjacency list for vertex v
            ^
  symbol:   class Bag
  location: class Digraph
WordDAG.java:247: error: no suitable constructor found for Topological(Digraph)
        Topological T = new Topological(R);
                        ^
    constructor Topological.Topological(edu.princeton.cs.algs4.Digraph) is not applicable
      (argument mismatch; Digraph cannot be converted to edu.princeton.cs.algs4.Digraph)
    constructor Topological.Topological(EdgeWeightedDigraph) is not applicable
      (argument mismatch; Digraph cannot be converted to EdgeWeightedDigraph)
WordDAG.java:248: error: reference to Stack is ambiguous
        Stack<Integer> pilha = new Stack<Integer>();
        ^
  both class java.util.Stack in java.util and class edu.princeton.cs.algs4.Stack in edu.princeton.cs.algs4 match
WordDAG.java:248: error: reference to Stack is ambiguous
        Stack<Integer> pilha = new Stack<Integer>();
                                   ^
  both class java.util.Stack in java.util and class edu.princeton.cs.algs4.Stack in edu.princeton.cs.algs4 match
Digraph.java:72: error: cannot find symbol
        adj = (Bag<Integer>[]) new Bag[V];
               ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:72: error: cannot find symbol
        adj = (Bag<Integer>[]) new Bag[V];
                                   ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:74: error: cannot find symbol
            adj[v] = new Bag<Integer>();
                         ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:93: error: cannot find symbol
            adj = (Bag<Integer>[]) new Bag[V];
                   ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:93: error: cannot find symbol
            adj = (Bag<Integer>[]) new Bag[V];
                                       ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:95: error: cannot find symbol
                adj[v] = new Bag<Integer>();
                             ^
  symbol:   class Bag
  location: class Digraph
Digraph.java:122: error: cannot find symbol
            Stack<Integer> reverse = new Stack<Integer>();
            ^
  symbol:   class Stack
  location: class Digraph
Digraph.java:122: error: cannot find symbol
            Stack<Integer> reverse = new Stack<Integer>();
                                         ^
  symbol:   class Stack
  location: class Digraph
Note: WordDAG.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
